PCS BAckup 26Dec2023/Backup-Source/objects/Product_Pipeline__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Pipelines</relationshipLabel>
        <relationshipName>Product_Pipelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Launch_Date__c</fullName>
        <label>GCP Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GCP_Launch_Year__c</fullName>
        <label>GCP Launch Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Updated_Date__c</fullName>
        <label>GCP Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Name__c</fullName>
        <formula>Vision_GCP_Product_Family__c +&apos; &apos;+ Vision_Strength__c +&apos;-&apos;+ Vision_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Anda_Filed__c</fullName>
        <label>Anda Filed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Api_Vertically_Integrated__c</fullName>
        <label>Api Vertically Integrated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Authorized_Generic__c</fullName>
        <label>Authorized Generic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Dosage_Form__c</fullName>
        <label>Dosage Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Topical</fullName>
                </value>
                <value>
                    <fullName>Solid</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>Capsules</fullName>
                </value>
                <value>
                    <fullName>Opthalmic / Otic</fullName>
                </value>
                <value>
                    <fullName>Injectable</fullName>
                </value>
                <value>
                    <fullName>Oral Susp / liquid</fullName>
                </value>
                <value>
                    <fullName>Nasal spray</fullName>
                </value>
                <value>
                    <fullName>Inhalation</fullName>
                </value>
                <value>
                    <fullName>Ring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_GCN__c</fullName>
        <label>GCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GPI__c</fullName>
        <label>GPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Generic_Name__c</fullName>
        <label>GCP Generic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Launch_Month1__c</fullName>
        <formula>CASE(MONTH(GCP_Launch_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Launch_Month__c</fullName>
        <label>Launch Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Launch_Qtr__c</fullName>
        <label>Launch Qtr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Launch_Type__c</fullName>
        <label>Launch Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Launch_Year1__c</fullName>
        <formula>TEXT(YEAR(GCP_Launch_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Launch_Year__c</fullName>
        <label>Launch Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Potential_Launch_date__c</fullName>
        <label>Potential Launch Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Reference_Brand__c</fullName>
        <label>Reference Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Reporting_Molecule__c</fullName>
        <label>Reporting Molecule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Strat_Plan_Molecule__c</fullName>
        <label>GCP Strat Plan Molecule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Strength__c</fullName>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Therapeutic_Area__c</fullName>
        <label>GCP Therapeutic Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Unit_Dose__c</fullName>
        <label>Unit Dose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_Date__c</fullName>
        <label>Vision Updated Date</label>
        <type>Date</type>
    </fields>
    <label>Product Pipeline</label>
    <listViews>
        <fullName>All_Product_Pipeline</fullName>
        <columns>NAME</columns>
        <columns>Vision_Segment__c</columns>
        <columns>Vision_Reporting_Molecule__c</columns>
        <columns>Vision_Strength__c</columns>
        <columns>Vision_Size__c</columns>
        <columns>Vision_Dosage_Form__c</columns>
        <columns>Vision_Reference_Brand__c</columns>
        <columns>Vision_Launch_Year__c</columns>
        <columns>Vision_Launch_Type__c</columns>
        <columns>Vision_Api_Vertically_Integrated__c</columns>
        <columns>Vision_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Pipeline</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Pipeline-{00000}</displayFormat>
        <label>Pipeline No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Pipelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>